[package]
edition = "2021"
name = "rhis"
version = "0.10.1"
authors = ["zylthinking"]
description = "rhis is a modification to fit my usage based on McFly 0.8.1"
categories = ["command-line-utilities"]
license = "MIT"
repository = "https://github.com/zylthinking/rhis"

[profile.dev]
debug = true

[profile.release]
lto = true

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.26", features = ["use-dev-tty"] }
humantime = "2.1"
is_executable = "1.0.0"
libc = "0.2"
relative-path = "1.7"
serde = { version = "1", features = ["derive"] }
shellexpand = "2.1"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
unicode-segmentation = "1.9"
which = "4.0"
